Fix overflow-x hidden

--- a/src/scss/reusuable.scss
+++ b/src/scss/reusuable.scss
@@ -61,5 +61,5 @@
 // Main
 
 .main {
-  overlow-x: hidden;
+  overflow-x: hidden;
 }
